# Fe2O3

./: Cargo.toml  README.md
.github/workflows/: build_and_test.yml
src/: lib.rs
src/core/: array_trait.rs  mod.rs  types.rs
src/core/arrays/: data_hold.rs  data_traits.rs  data_view.rs  data_wrap.rs  mod.rs
src/spaces/: mod.rs  sets.rs  topology.rs
