[package]
name = "fe2o3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
infinitable = "1.3.0"
ndarray = { git = "https://github.com/rust-ndarray/ndarray.git", branch= "master" }
num = { git = "https://github.com/rust-num/num.git", branch = "master"}
